# ADAGIO

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README.rst  TODO_KAPIL.md  env.txt  environment.yml  is_brain_renamed.tsv  main.py  mypy.ini  requirements_dev.txt  setup.py
data/: alzheimer's  alzheimers  parkinsons
data/genedise_genelists/: Alzheimers disease_drugs  Alzheimers disease_drugs100_difference  Alzheimers disease_genetic  Alzheimers disease_genetic100_difference  Parkinson's disease_drugs  Parkinson's disease_drugs100_difference  Parkinson's disease_genetic  Parkinson's disease_genetic100_difference  allergy_drugs  allergy_genetic  (+77 more)
docs/: arch.md  index.rst  installation.rst  make.bat
notebooks/: add-remove-edges.ipynb  add-remove-edges.py  dada.ipynb  get-genelist.py  glider.ipynb  graphs.ipynb  merge.ipynb  rwr.ipynb  scoring.ipynb
scripts/: .tissue_reweight_copy.py.swp  MyJob.5574967.c1cmp013.err  MyJob.5574988.c1cmp013.err  MyJob.5575004.c1cmp013.err  MyJob.5575230.i2cmp003.err  MyJob.5575230.i2cmp003.out  allen_view.py  argument_parsing.py  brain_not_brain.py  clean_genedise_genelist.py  glide_results.txt  glider_experiments.py  rename_ensembl.py  results  run_glider_exp.sh  run_jobs.sh  tissue_reweight_by_algs_exp.py  tissue_reweight_copy.py  visualize_glider_exp.py
src/: main.py  main.rs
t_map/: .travis.yml  README.rst  setup.cfg  tox.ini
t_map.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test_data/: edge.list
tests/: test_feta.py  test_garbanzo.py  test_hummus.py
(+392 files in other folders)
