[package]
name = "TMAP"
version = "0.1.0"
authors = ["Mert Erden <merden01@eecs.tufts.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {git = "https://github.com/ritchie46/polars" }
csv = "1.1.6"
pyo3 = "0.14.1"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.4"
